# mpext2-xiaozhimcp

./: .babelrc  LICENSE  README.md  package-lock.json  package.json  webpack.config.js
extension/: func.js  index.js
extension/locales/: en.json  index.js  zh-cn.json
extension/public/: config.json
extension/public/libraries/xiaozhi-mcp/: CMakeLists.txt  LICENSE.txt  README.md  library.properties
extension/public/libraries/xiaozhi-mcp/examples/BasicExample/: BasicExample.ino
extension/public/libraries/xiaozhi-mcp/examples/SmartSwitchExample/: SmartSwitchExample.ino
extension/public/libraries/xiaozhi-mcp/examples/XiaozhiEsp32MCP/: XiaozhiEsp32MCP.ino
extension/public/libraries/xiaozhi-mcp/src/: WebSocketMCP.cpp  WebSocketMCP.h
scripts/: build-l10n.js  supported-locales.js
utils/: argument-type.js  block-type.js  data-type.js  translation.js
